Fixed some errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
-project(A3)
-
+project(Assignment-3)
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(The_project "BMP Editor.cpp")
-add_executable(6_filters "6-filters.cpp")
+add_executable(BMP "BMP Editor.cpp")
+add_executable(RGB "RGB Editor.cpp")
+add_executable(project "CS112-2022-2nd – S4 -20210083-20210485-20211033-A3- Part1.cpp")
