fixed a bug when running
* fixed a bug when running the program related to the name of the cpp files and the cMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
-project(Assignment-3)
+project(BMP-Editor)
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(BMP "BMP Editor.cpp")
-add_executable(RGB "RGB Editor.cpp")
-add_executable(project "CS112-2022-2nd – S4 -20210083-20210485-20211033-A3- Part1.cpp")
+add_executable(Grey-BmpEditor "Grey-BmpEditor.cpp")
+add_executable(RGB-BmpEditor "RGB-BmpEditor.cpp")
